Fix merge request causing InvocationError when updating and deleting participant